--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h1>Quem canta os males espanta</h1>
-    <h2>Quem canta os males espanta</h2>
-    <h3>Quem canta os males espanta</h3>
+    <header>
+        <div class="container even-columns">
+            <h2 class="">Lado A</h2>
+            <h2 class="">Lado B</h2>            
+        </div>
+    </header>
 </body>
 </html>
