--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <header>
-        <div class="container even-columns">
-            <h2 class="">Lado A</h2>
-            <h2 class="">Lado B</h2>            
-        </div>
-    </header>
+    <div class="flex gap-1">
+        <a href="#" class="btn btn-sm">Label</a>
+        <a href="#" class="btn btn-md">Label</a>
+        <a href="#" class="btn btn-lg">Label</a>
+        <button href="#" class="btn">Label</button>
+    </div>
+
+    <div class="flex gap-1">
+        <a aria-label="Label" href="#" class="btn btn-sm"></a>
+        <a aria-label="Label" href="#" class="btn btn-md"></a>
+        <a aria-label="Label" href="#" class="btn btn-lg"></a>
+        <button aria-label="Label" href="#" class="btn"></button>
+    </div>
 </body>
 </html>
