--- a/index.html
+++ b/index.html
@@ -12,17 +12,10 @@
 </head>
 <body>
     <div class="flex gap-1">
-        <a href="#" class="btn btn-sm">Label</a>
-        <a href="#" class="btn btn-md">Label</a>
-        <a href="#" class="btn btn-lg">Label</a>
-        <button href="#" class="btn">Label</button>
-    </div>
-
-    <div class="flex gap-1">
-        <a aria-label="Label" href="#" class="btn btn-sm"></a>
-        <a aria-label="Label" href="#" class="btn btn-md"></a>
-        <a aria-label="Label" href="#" class="btn btn-lg"></a>
-        <button aria-label="Label" href="#" class="btn"></button>
+        <a href="#" class="social" aria-label="tiktok"></a>
+        <a href="#" class="social" aria-label="instagram"></a>
+        <a href="#" class="social" aria-label="twitter"></a>
+        <a href="#" class="social" aria-label="discord"></a>
     </div>
 </body>
 </html>
