--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <div class="flex gap-1">
-        <a href="#" class="social" aria-label="tiktok"></a>
-        <a href="#" class="social" aria-label="instagram"></a>
-        <a href="#" class="social" aria-label="twitter"></a>
-        <a href="#" class="social" aria-label="discord"></a>
-    </div>
+    <header>
+        <div class="container py-base">
+            <nav class="flex items-center gap-1.5">
+                <a href="#">
+                    <img src="./resources/logo.svg" alt="logotipo">
+                </a>
+                <a href="#about" class="desktop-only">Conheça o app</a>
+                <a href="#features" class="desktop-only">Funcionalidades</a>
+                <a href="#pricing" class="desktop-only">Planos e preços</a>
+                
+                <a href="#download" class="btn btn-sm">Baixar agora</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
