--- a/index.html
+++ b/index.html
@@ -153,5 +153,30 @@
             </div>
         </div>
     </section>
+
+    <section id="download">
+        <div class="container py-xl">
+            <div class="card px-lg even-columns items-center">
+                <div>
+                    <header>
+                        <strong>download</strong>
+                        <h2>Bora cantar?</h2>
+                    </header>
+                    <p>
+                        Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!
+                    </p>
+                    <div class="button flex gap-1">
+                        <a href="#">
+                            <img src="./resources/App store button.png" alt="baixar da apple store">
+                        </a>
+                        <a href="#">
+                            <img src="./resources/Play Store button.png" alt="baixar da play store">
+                        </a>
+                    </div>
+                </div>
+                <img src="./resources/images/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
